--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,8 @@ os: Visual Studio 2015
 clone_folder: c:\projects\dotrix
 
 before_build:
-  - set PATH=%PATH%;C:\Qt\5.7\msvc2015_64
+  - set QT_ROOT=C:\Qt\5.7\msvc2015_64
+  - set PATH=%PATH%;%QT_ROOT%\bin
 
 build_script:
   - cd c:\projects\dotrix
