--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,14 +8,10 @@ os: Visual Studio 2015
 
 clone_folder: c:\projects\dotrix
 
-install:
-  - '"C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64'
-
 before_build:
   - set QT_ROOT=C:\Qt\5.7\msvc2015_64
-  - set PATH=%PATH%;%QT_ROOT%\bin
+  - set PATH=%PATH%;%QT_ROOT%\bin;"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\amd64"
   - qmake --version
-  - nmake --version
 
 build_script:
   - cd c:\projects\dotrix
