--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,7 @@ before_build:
   - set QT_ROOT=C:\Qt\5.7\msvc2015_64
   - set PATH=%PATH%;%QT_ROOT%\bin;"C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\amd64"
   - qmake --version
+  - qtenv2.bat
 
 build_script:
   - cd c:\projects\dotrix
