--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,3 +22,16 @@ build_script:
   - mkdir build && cd build
   - qmake -makefile -o Makefile ..\dotrix.pro
   - nmake
+
+deploy:
+  provider: GitHub
+  tag: $(APPVEYOR_REPO_TAG_NAME)
+  description: 'v$(APPVEYOR_REPO_TAG_NAME)'
+  auth_token:
+    secure: +F7/lKFe9fc9q4w0lCpc9tR1H4JucHiE7WuevfJCaWOeU/5ul8QojqNACB6ODFgT
+  artifact: installer
+  draft: false
+  prerelease: false
+  on:
+    appveyor_repo_tag: true
+  force_update: true
