--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,8 +20,16 @@ before_build:
 build_script:
   - cd c:\projects\dotrix
   - mkdir build && cd build
-  - qmake -makefile -o Makefile ..\dotrix.pro
+  - cmake .. -G "NMake Makefiles"
   - nmake
+
+after_build:
+  - c:\projects\dotrix\build
+  - nmake package
+
+artifacts:
+- path: .\build\Dotrix-*-win*.exe
+  name: installer
 
 deploy:
   provider: GitHub
