--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,12 +17,12 @@ before_build:
   - qtenv2.bat
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" %platform%
 
-  - git clone --depth=1 --branch=0.9.0 https://github.com/nnarain/gameboycore.git c:\tmp\gameboycore
+  - git clone --depth=1 --branch=0.9.1 https://github.com/nnarain/gameboycore.git c:\tmp\gameboycore
   - cd c:\tmp\gameboycore
   - mkdir build && cd build
-  - cmake .. -DBUILD_TESTS="OFF" -DWITH_GUI="OFF" -DCMAKE_INSTALL_PREFIX=c:\libs\gameboycore
-  - msbuild gameboycore.sln /verbosity:quiet
-  - msbuild INSTALL.vcxproj /verbosity:quiet
+  - cmake .. -G "NMake Makefiles" -DBUILD_TESTS="OFF" -DBUILD_EXAMPLE="OFF" -DCMAKE_INSTALL_PREFIX=c:\libs\gameboycore
+  - nmake
+  - nmake install
   - set PATH=%PATH%;c:\libs\gameboycore
 
 build_script:
