added discover client class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ set(HEADERS
 	
 	include/net/lan_manager.h
 	include/net/discover_server.h
+	include/net/discover_client.h
 )
 
 add_executable(${PROJECT_NAME}
