--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ before_build:
 build_script:
   - cd c:\projects\dotrix
   - mkdir build && cd build
-  - cmake .. -G "NMake Makefiles"
+  - cmake .. -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=Release
   - nmake
 
 after_build:
