--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ before_build:
   - git clone --depth=1 --branch=0.17.0 https://github.com/nnarain/gameboycore.git c:\tmp\gameboycore
   - cd c:\tmp\gameboycore
   - mkdir build && cd build
-  - cmake .. -G "NMake Makefiles" -DBUILD_TESTS="OFF" -DBUILD_EXAMPLE="OFF" -DCMAKE_INSTALL_PREFIX=c:\libs\gameboycore
+  - cmake .. -G "NMake Makefiles" -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS="OFF" -DBUILD_EXAMPLE="OFF" -DCMAKE_INSTALL_PREFIX=c:\libs\gameboycore
   - nmake
   - nmake install
   - set PATH=%PATH%;c:\libs\gameboycore
